@startuml loyalty-service-database-schema

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b><u>x</u></b>
!define foreign_key(x) <i>x</i>
!define unique(x) <color:blue>x</color>

title Loyalty Service Database Schema (loyalty-db)

Table(customer_points_balance, "customer_points_balance") {
  primary_key(id): BIGSERIAL
  --
  unique(customer_id): BIGINT NOT NULL
  current_points: DECIMAL(10,2) NOT NULL DEFAULT 0
  lifetime_points: DECIMAL(10,2) NOT NULL DEFAULT 0
  last_calculated_at: TIMESTAMP
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
  --
  Indexes:
  idx_points_balance_customer (customer_id)
}

Table(points_transactions, "points_transactions") {
  primary_key(id): BIGSERIAL
  --
  customer_id: BIGINT NOT NULL
  transaction_type: VARCHAR(20) NOT NULL
  points_amount: DECIMAL(10,2) NOT NULL
  reference_id: VARCHAR(100)
  description: TEXT
  created_at: TIMESTAMP
  --
  Indexes:
  idx_points_txn_customer (customer_id)
}

Table(redemption_offers, "redemption_offers") {
  primary_key(id): BIGSERIAL
  --
  name: VARCHAR(100) NOT NULL
  description: TEXT
  points_cost: DECIMAL(10,2) NOT NULL
  discount_amount: DECIMAL(10,2) NOT NULL
  minimum_spend: DECIMAL(10,2)
  valid_from: DATE
  valid_to: DATE
  max_uses_per_customer: INT
  created_by: BIGINT
  created_at: TIMESTAMP
}

Table(redemption_usage, "redemption_usage") {
  primary_key(id): BIGSERIAL
  --
  foreign_key(offer_id): BIGINT NOT NULL
  customer_id: BIGINT NOT NULL
  basket_reference: VARCHAR(100) NOT NULL
  redeemed_at: TIMESTAMP
  --
  Indexes:
  idx_redemption_usage_customer (customer_id)
  --
  Foreign Keys:
  FK offer_id → redemption_offers(id)
}

Table(bonus_offers, "bonus_offers") {
  primary_key(id): BIGSERIAL
  --
  name: VARCHAR(100) NOT NULL
  multiplier: DECIMAL(5,2) NOT NULL DEFAULT 1.0
  applicable_categories: VARCHAR(255)
  valid_from: DATE
  valid_to: DATE
  created_by: BIGINT
  created_at: TIMESTAMP
}

Table(product_points_rules, "product_points_rules") {
  primary_key(rule_id): SERIAL
  --
  item_id: INT NOT NULL
  points_per_unit: INT
  points_per_gbp: DECIMAL(10,2)
  valid_from: TIMESTAMP NOT NULL
  valid_to: TIMESTAMP
  is_active: BOOLEAN DEFAULT TRUE
  is_deleted: BOOLEAN DEFAULT FALSE
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
  deactivated_at: TIMESTAMP
  --
  Indexes:
  idx_product_points_item (item_id)
  idx_product_points_active (is_active, valid_from, valid_to)
  idx_product_points_validity (valid_from, valid_to)
}

customer_points_balance "1" -- "0..*" points_transactions : customer_id
customer_points_balance "1" -- "0..*" redemption_usage : customer_id
redemption_offers "1" -- "0..*" redemption_usage : offer_id

note top of customer_points_balance
  **Points Balance:**
  - current_points: Available for redemption
  - lifetime_points: Total earned (never decreases)
  - Pessimistic locking: SELECT FOR UPDATE during redemption
  
  **References (not enforced):**
  - customer_id → users.id (Auth Service) or external customer ID
end note

note top of points_transactions
  **Transaction Types:**
  - EARNED: Points awarded from purchases
  - REDEEMED: Points spent on offers
  - ADJUSTED: Manual correction (refunds)
  - BONUS: Bonus offer multiplier points
  
  **Audit Trail:**
  - Immutable record (no updates/deletes)
  - reference_id: Links to external transaction/basket
end note

note bottom of redemption_offers
  **Offer Configuration:**
  - points_cost: Points required to redeem
  - discount_amount: £ value of discount
  - minimum_spend: Minimum basket total (optional)
  
  **Examples:**
  - "£10 off £50 spend": 500 points → £10 discount, £50 minimum
  - "Free delivery": 200 points → £5 discount, no minimum
  
  **Validity:**
  - valid_from/valid_to: Optional date range
  - max_uses_per_customer: Limit redemptions per user
end note

note bottom of redemption_usage
  **Usage Tracking:**
  - Prevents double-redemption
  - basket_reference: Idempotency key
  - Used to enforce max_uses_per_customer limit
  
  **SAGA Pattern:**
  - Created atomically with points deduction
  - Rolled back if basket payment fails
end note

note bottom of bonus_offers
  **Bonus Multipliers:**
  - multiplier: 2.0 = double points, 3.0 = triple points
  - applicable_categories: Filter by product category
  
  **Examples:**
  - "Weekend Warriors": 2.0x Power Tools (Sat/Sun)
  - "Summer Sale": 1.5x all categories (June-Aug)
  
  **Application:**
  - Applied during scheduled points calculation
  - Retroactive to qualifying transactions
end note

note bottom of product_points_rules
  **Loyalty Points Configuration:**
  - Network Manager sets points earned per product
  - Two modes:
    * points_per_unit: Fixed points (e.g., 5 points per drill)
    * points_per_gbp: Percentage-based (e.g., 0.5 points per £1)
  
  **Validity & Soft Delete:**
  - valid_from/valid_to: Time-based rules
  - is_active: Active/inactive toggle
  - is_deleted: Soft delete flag (preserves history)
  
  **Constraints:**
  - At least one of points_per_unit OR points_per_gbp must be set
  - Both cannot be NULL
  
  **References (not enforced):**
  - item_id → warehouse.items.item_id (legacy MySQL)
end note

@enduml
